add patient + views

--- a/CovidXWebApp/Views/Shared/CovidX/Dashboard.cshtml
+++ b/CovidXWebApp/Views/Shared/CovidX/Dashboard.cshtml
@@ -7,7 +7,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>AdminLTE 3 | Starter</title>
+    <title>CO-X | DashBoard</title>
     <partial name="CovidX/_Styles" />
 </head>
 <body class="hold-transition sidebar-mini">
@@ -27,7 +27,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                 <div class="container-fluid">
                     <div class="row mb-2">
                         <div class="col-sm-6">
-                            <h1 class="m-0">Starter Page</h1>
+                            <h1 class="m-0">DashBoard</h1>
                         </div><!-- /.col -->
                         <div class="col-sm-6">
                             <ol class="breadcrumb float-sm-right">
