--- a/CovidXWebApp/Views/_ViewImports.cshtml
+++ b/CovidXWebApp/Views/_ViewImports.cshtml
@@ -1,3 +1,15 @@
-﻿@using CovidXWebApp
+﻿@using EFCore
+@using EFCore.Model
+@using EFCore.EFCoreConfigurationMethods
+@using Utility
+@using Microsoft.AspNetCore.Identity
+@using CovidXWebApp.Services
+@using CovidXWebApp.Services.Interface
+
+
+
+@using CovidXWebApp
 @using CovidXWebApp.Models
+@using CovidXWebApp.Models.ViewModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+
