--- a/CovidXWebApp/Views/Home/Index.cshtml
+++ b/CovidXWebApp/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
-    Layout = "~/Views/Shared/CovidX/_Layout.cshtml";
+    //Layout = "~/Views/Shared/CovidX/_Layout.cshtml";
 }
 
 <div class="text-center">
