--- a/CovidXWebApp/Views/Shared/CovidX/Dashboard.cshtml
+++ b/CovidXWebApp/Views/Shared/CovidX/Dashboard.cshtml
@@ -26,15 +26,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
             <div class="content-header">
                 <div class="container-fluid">
                     <div class="row mb-2">
-                        <div class="col-sm-6">
-                            <h1 class="m-0">DashBoard</h1>
-                        </div><!-- /.col -->
-                        <div class="col-sm-6">
-                            <ol class="breadcrumb float-sm-right">
-                                <li class="breadcrumb-item"><a href="#">Home</a></li>
-                                <li class="breadcrumb-item active">Starter Page</li>
-                            </ol>
-                        </div><!-- /.col -->
+                        @RenderSection("PageHeader", required: false)
                     </div><!-- /.row -->
                 </div><!-- /.container-fluid -->
             </div>
@@ -63,5 +55,6 @@ scratch. This page gets rid of all links and provides the needed markup only.
     <!-- ./wrapper -->
 
     <partial name="CovidX/_Scripts" />
+    @RenderSection("Scripts", required: false)
 </body>
 </html>
