--- a/CovidXWebApp/Views/Shared/CovidX/MainNavigation/_PatientNavigation.cshtml
+++ b/CovidXWebApp/Views/Shared/CovidX/MainNavigation/_PatientNavigation.cshtml
@@ -27,10 +27,10 @@
         </li>
         <li class="nav-item">
             <a asp-controller="Profile"
-               asp-action="Book"
+               asp-action="RequestTest"
                class="nav-link @Url.MakeActiveClass(controllerName: "Profile", actionName: "Book")">
                 <i class="nav-icon fas fa-file-medical-alt"></i>
-                <p>Book a Test</p>
+                <p>Request a Test</p>
             </a>
         </li>
         <li class="nav-item">
