--- a/CovidXWebApp/Views/Nurse/NurseDetails/_AvatarSelect.cshtml
+++ b/CovidXWebApp/Views/Nurse/NurseDetails/_AvatarSelect.cshtml
@@ -1,4 +1,4 @@
-﻿@model PatientCreateViewModel
+﻿@model NurseCreateViewModel
 
 <div class="card card-widget widget-user">
     <!-- Add the bg color to the header using any of the bg-* classes -->
@@ -45,3 +45,4 @@
         </div>
     </div>
 </div>
+
