--- a/CovidXWebApp/Views/Profile/CreateDependent.cshtml
+++ b/CovidXWebApp/Views/Profile/CreateDependent.cshtml
@@ -29,6 +29,10 @@
     @*<partial name="AdminLTE/Script/_Avatar" />*@
 }
 
+<div class="row justify-content-center">
+    <partial name="CovidX/Page/_Alert" model="Model.Alert" />
+</div>
+
 <!-- 12 COLUMN CARD START -->
 <form asp-controller="Profile"
       asp-action="CreateDependent"
