--- a/CovidXWebApp/Views/Shared/CovidX/MainNavigation/_NurseNavigation.cshtml
+++ b/CovidXWebApp/Views/Shared/CovidX/MainNavigation/_NurseNavigation.cshtml
@@ -10,8 +10,8 @@
     </a>
     <ul class="nav nav-treeview ml-3">
         <li class="nav-item">
-            <a asp-controller=""
-               asp-action=""
+            <a asp-controller="Nurse"
+               asp-action="NurseViewProfile"
                class="nav-link @Url.MakeActiveClass(controllerName: "Profile", actionName: "Index")">
                 <i class="nav-icon fas fa-user-plus"></i>
                 <p>View Profile</p>
