--- a/CovidXWebApp/Views/Profile/Create.cshtml
+++ b/CovidXWebApp/Views/Profile/Create.cshtml
@@ -22,6 +22,9 @@
         </script>
     }
 
+<div class="row justify-content-center">
+    <partial name="CovidX/Page/_Alert" model="Model.Alert" />
+</div>
 
     <!-- 12 COLUMN ROW START -->
     <body class="hold-transition login-card-body">
@@ -46,7 +49,6 @@
             <form asp-controller="Profile"
                   asp-action="Create"
                   class="col-md-8">
-                <h1>@User.Identity.Name</h1>
                 <div class="card">
                     <!-- CARD HEADER START -->
                     <div class="card-header">
