--- a/CovidXWebApp/Views/Shared/CovidX/MainNavigation/_PatientNavigation.cshtml
+++ b/CovidXWebApp/Views/Shared/CovidX/MainNavigation/_PatientNavigation.cshtml
@@ -35,8 +35,8 @@
         </li>
         <li class="nav-item">
             <a asp-controller="Profile"
-               asp-action="Book"
-               class="nav-link @Url.MakeActiveClass(controllerName: "Profile", actionName: "Book")">
+               asp-action="ViewTestRequestDetails"
+               class="nav-link @Url.MakeActiveClass(controllerName: "Profile", actionName: "ViewTestRequestDetails")">
                 <i class="nav-icon fas fa-clipboard-list"></i>
                 <p>View Test Request Details</p>
             </a>
