--- a/CovidXWebApp/Views/Shared/CovidX/_MainNavigation.cshtml
+++ b/CovidXWebApp/Views/Shared/CovidX/_MainNavigation.cshtml
@@ -2,8 +2,7 @@
     string BrandName = "CO-X!";
             }
 
-<aside class="main-sidebar sidebar-light-blue elevation-4">
-     Brand Logo 
+<aside class="main-sidebar sidebar-light-navy elevation-4">
     <partial name="CovidX/MainNavigation/_Brand" model="BrandName" />
 
     <!-- Sidebar -->
