--- a/CovidXWebApp/Views/Profile/RequestTest.cshtml
+++ b/CovidXWebApp/Views/Profile/RequestTest.cshtml
@@ -26,7 +26,9 @@
     </script>
 }
 
-
+<div class="row justify-content-center">
+    <partial name="CovidX/Page/_Alert" model="Model.Alert" />
+</div>
 
 
 <!-- 12 COLUMN CARD START -->
@@ -67,11 +69,11 @@
                         </div>
                     </div>
                 </div>-->
-                <div class="card card-danger">
+                <div class="card card-maroon">
                     <div class="card-header">
                         <h4 class="card-title w-100">
                             <a class="d-block w-100" data-toggle="collapse" href="#collapseTwo">
-                                Main Member
+                                Request a Test
                             </a>
                         </h4>
                     </div>
@@ -79,21 +81,6 @@
                         <div class="card-body">
                             <!--Partial View for Patient Profile Info-->
                             <partial name="TestRequestDetails/_PatientRequest.cshtml" model="Model" />
-                        </div>
-                    </div>
-                </div>
-                <div class="card card-danger">
-                    <div class="card-header">
-                        <h4 class="card-title w-100">
-                            <a class="d-block w-100" data-toggle="collapse" href="#collapseThree">
-                                Dependent Details
-                            </a>
-                        </h4>
-                    </div>
-                    <div id="collapseThree" class="collapse" data-parent="#accordion">
-                        <div class="card-body">
-                            <!--Partial View for Dependent Info-->
-                            <partial name="TestRequestDetails/_DependentRequest.cshtml" model="Model" />
                         </div>
                     </div>
                 </div>
