--- a/CovidXWebApp/Views/Profile/TestRequestDetails/_DependentRequest.cshtml
+++ b/CovidXWebApp/Views/Profile/TestRequestDetails/_DependentRequest.cshtml
@@ -33,41 +33,18 @@
 
 <!-- Multiple Select Dependent List -->
 <!-- SELECT INPUT START -->
-<div class="form-group">
-
-    <!-- INPUT LABEL -->
-    <label asp-for="SelectedDependentIds">Select Dependents</label>
-
-    <!-- INPUT ITEM -->
-    <select asp-for="SelectedDependentIds"
-            asp-items="_patientService.GetDependentByPatientID(patient.PatientID)"
-            class="selectpicker"
-            data-width="100%"
-            data-live-search="true"
-            multiple
-            data-max-options="5"
-            title="Select dependent(s)">
-    </select>
-
-    <!-- INPUT VALIDATION MESSAGE -->
-    <span asp-validation-for="SelectedDependentIds"
-          style="display:inline" />
-</div>
-
-<div class="input-group mb-3">
-
-    <!-- INPUT LABEL -->
-    <label asp-for="DependentId">Dependent</label>
-    <!-- INPUT ITEM -->
-    <select asp-for="SuburbId"
-            asp-items="_patientService.GetDependentByPatientID(patient.PatientID)"
-            class="selectpicker"
-            data-width="100%"
-            data-live-search="true"
-            title="Select a dependent">
-    </select>
-
-    <!-- INPUT VALIDATION MESSAGE -->
-    <span asp-validation-for="DependentId"
-          style="display:inline" />
+<div class="form-group row">
+    <label asp-for="SelectedDependentIds" class="text-muted col-sm-2 col-form-label">Select Dependents</label>
+    <div class="col-sm-10">
+        <select asp-for="SelectedDependentIds"
+                asp-items="_patientService.GetDependentByPatientID(patient.PatientID)"
+                class="selectpicker"
+                data-width="100%"
+                data-live-search="true"
+                multiple
+                data-max-options="5"
+                title="Select dependent(s)">
+        </select>
+        <span asp-validation-for="SelectedDependentIds" style="display:inline" />
+    </div>
 </div>
