--- a/CovidXWebApp/Views/Profile/TestRequestDetails/_PatientRequest.cshtml
+++ b/CovidXWebApp/Views/Profile/TestRequestDetails/_PatientRequest.cshtml
@@ -4,14 +4,21 @@
 @inject UserManager<EFCoreIdentityUser> _userManager
 
 @section Scripts{
+    <script src="~/plugins/select2/js/select2.full.min.js"></script>
     <script>
         $(function () {
+            //Initialize Select2 Elements
+            $('.select2').select2()
 
-            $('#datemask').inputmask('dd/mm/yyyy', { 'placeholder': 'dd/mm/yyyy' })
+            //Initialize Select2 Elements
+            $('.select2bs4').select2({
+                theme: 'bootstrap4'
+            })
 
-            $('[data-mask]').inputmask()
-        })
+
+
     </script>
+
 }
 
 @{
@@ -25,53 +32,70 @@
 }
 
 <!-- SWITCH isTestForMyself  INPUT START -->
-<div class="form-group">
-    <div class="custom-control custom-switch">
-        <!-- INPUT ITEM -->
-        <input asp-for="testforMyself"
-               class="custom-control-input">
-        <!-- INPUT LABEL -->
-        <label asp-for="testforMyself"
-               class="custom-control-label">Is test for myself?</label>
+<!--Test for patient-->
+<div class="form-group row">
+    <!-- INPUT LABEL -->
+    @*<label asp-for="testforMyself"
+        class="text-muted col-sm-2 col-form-label">Is test for myself?</label>*@
+    <div class="col-sm-10">
+        <!-- SWITCH isTestForMyself  INPUT START -->
+        <div class="form-group">
+            <div class="custom-control custom-switch">
+                <!-- INPUT ITEM -->
+                <input asp-for="testforMyself"
+                       class="custom-control-input">
+                <!-- INPUT LABEL -->
+                <label asp-for="testforMyself"
+                       class="custom-control-label">Is test for myself?</label>
+            </div>
+        </div>
+        <span asp-validation-for="testforMyself" class="error invalid-feedback" />
+    </div>
+</div>
+<!---Address List-->
+<div class="form-group row">
+    <label asp-for="TestAddress1" class="text-muted col-sm-2 col-form-label">Patient Test Address</label>
+    <div class="col-sm-10">
+        <select asp-for="TestAddress1"
+                asp-items="_patientService.GetPatientAddress(patient.PatientID)"
+                class="selectpicker"
+                data-width="100%"
+                data-live-search="true"
+                title="Select test address">
+        </select>
+        <span asp-validation-for="TestAddress1" style="display:inline" />
+    </div>
+</div>
+<!--Suburb -->
+<div class="form-group row">
+    <label asp-for="SuburbId" class="text-muted col-sm-2 col-form-label">Suburb</label>
+    <div class="col-sm-10">
+        <select asp-for="SuburbId"
+                asp-items="_patientService.GetSuburbList()"
+                class="selectpicker"
+                data-width="100%"
+                data-live-search="true"
+                title="Select suburb">
+        </select>
+        <span asp-validation-for="SuburbId" style="display:inline" />
     </div>
 </div>
 
-<!-- Address List -->
-<div class="input-group mb-3">
-
-    <!-- INPUT LABEL -->
-    <label asp-for="TestAddress1">Patient Test Address</label>
-    <!-- INPUT ITEM -->
-    <select asp-for="TestAddress1"
-            asp-items="_patientService.GetDependentAddress(patient.PatientID)"
-            class="selectpicker"
-            data-width="100%"
-            data-live-search="true"
-            title="Select address">
-    </select>
-
-    <!-- INPUT VALIDATION MESSAGE -->
-    <span asp-validation-for="TestAddress1"
-          style="display:inline" />
+<div class="form-group row">
+    <label asp-for="SelectedDependentIds" class="text-muted col-sm-2 col-form-label">Select Dependents</label>
+    <div class="col-sm-10">
+        <select asp-for="SelectedDependentIds"
+                asp-items="_patientService.GetDependentByPatientID(patient.PatientID)"
+                class="selectpicker"
+                data-width="100%"
+                data-live-search="true"
+                multiple
+                data-max-options="5"
+                title="Select dependent(s)">
+        </select>
+        <span asp-validation-for="SelectedDependentIds" style="display:inline" />
+    </div>
 </div>
 
-<!-- Suburb List -->
-<div class="input-group mb-3">
-
-    <!-- INPUT LABEL -->
-    <label asp-for="SuburbId">Suburb</label>
-    <!-- INPUT ITEM -->
-    <select asp-for="SuburbId"
-            asp-items="_patientService.GetSuburbList()"
-            class="selectpicker"
-            data-width="100%"
-            data-live-search="true"
-            title="Select suburb options">
-    </select>
-
-    <!-- INPUT VALIDATION MESSAGE -->
-    <span asp-validation-for="SuburbId"
-          style="display:inline" />
-</div>
 
 
