--- a/CovidXWebApp/Views/Shared/CovidX/MainNavigation/_HomeNavigation.cshtml
+++ b/CovidXWebApp/Views/Shared/CovidX/MainNavigation/_HomeNavigation.cshtml
@@ -1,10 +1,42 @@
-﻿<li class="nav-item">
-    <a asp-controller="Home"
-       asp-action="Dashboard"
-       class="nav-link @Url.MakeActiveClass(controllerName: "Home")">
-        <i class="nav-icon fas fa-home"></i>
-        <p>
-            Home
-        </p>
-    </a>
-</li>
+﻿
+@if (User.IsInRole(CovidXRoles.PATIENT))
+{
+    <li class="nav-item">
+        <a asp-controller="Home"
+           asp-action="PatientDashboard"
+           class="nav-link @Url.MakeActiveClass(controllerName: "Home")">
+            <i class="nav-icon fas fa-home"></i>
+            <p>
+                Home
+            </p>
+        </a>
+    </li>
+}
+
+@if (User.IsInRole(CovidXRoles.NURSE))
+{
+    <li class="nav-item">
+        <a asp-controller="Home"
+           asp-action="NurseDashboard"
+           class="nav-link @Url.MakeActiveClass(controllerName: "Home")">
+            <i class="nav-icon fas fa-home"></i>
+            <p>
+                Home
+            </p>
+        </a>
+    </li>
+}
+
+@if (User.IsInRole(CovidXRoles.ADMIN))
+{
+    <li class="nav-item">
+        <a asp-controller="Home"
+           asp-action="Dashboard"
+           class="nav-link @Url.MakeActiveClass(controllerName: "Home")">
+            <i class="nav-icon fas fa-home"></i>
+            <p>
+                Home
+            </p>
+        </a>
+    </li>
+}
