--- a/CovidXWebApp/Views/Profile/CreateDependent.cshtml
+++ b/CovidXWebApp/Views/Profile/CreateDependent.cshtml
@@ -68,7 +68,7 @@
                     <div id="collapseOne" class="collapse" data-parent="#accordion">
                         <div class="card-body">
                             <!---Partial Avatar-->
-                            @*<partial name="Detail/_AvatarSelect.cshtml" />*@
+                            <partial name="ProfileDetails/_AvatarSelect.cshtml" />
                         </div>
                     </div>
                 </div>
