--- a/CovidXWebApp/Views/Shared/CovidX/MainNavigation/_NurseNavigation.cshtml
+++ b/CovidXWebApp/Views/Shared/CovidX/MainNavigation/_NurseNavigation.cshtml
@@ -12,7 +12,7 @@
         <li class="nav-item">
             <a asp-controller="Nurse"
                asp-action="NurseViewProfile"
-               class="nav-link @Url.MakeActiveClass(controllerName: "Profile", actionName: "Index")">
+               class="nav-link @Url.MakeActiveClass(controllerName: "Nurse", actionName: "NurseViewProfile")">
                 <i class="nav-icon fas fa-user-plus"></i>
                 <p>View Profile</p>
             </a>
@@ -26,11 +26,11 @@
             </a>
         </li>
         <li class="nav-item">
-            <a asp-controller=""
-               asp-action=""
-               class="nav-link @Url.MakeActiveClass(controllerName: "Profile", actionName: "Book")">
+            <a asp-controller="Nurse"
+               asp-action="ScheduledTestRequests"
+               class="nav-link @Url.MakeActiveClass(controllerName: "Nurse", actionName: "ScheduledTestRequests")">
                 <i class="nav-icon fas fa-file-medical-alt"></i>
-                <p>View Test Request Details</p>
+                <p>View scheduled Test Request Details</p>
             </a>
         </li>
     </ul>
