--- a/CovidXWebApp/Views/Profile/Create.cshtml
+++ b/CovidXWebApp/Views/Profile/Create.cshtml
@@ -71,7 +71,7 @@
                     <!-- ADD CONTENT HERE -->
                     <!-- we are adding the accordion ID so Bootstrap's collapse plugin detects it -->
                     <div id="accordion">
-                        <div class="card card-primary">
+                        <div class="card card-info">
                             <div class="card-header">
                                 <h4 class="card-title w-100">
                                     <a class="d-block w-100" data-toggle="collapse" href="#collapseOne">
@@ -87,7 +87,7 @@
                             </div>
                         </div>
 
-                        <div class="card card-navy">
+                        <div class="card card-info">
                             <div class="card-header">
 
                                 <h4 class="card-title w-100">
@@ -103,7 +103,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="card card-green">
+                        <div class="card card-gray">
                             <div class="card-header">
                                 <h4 class="card-title w-100">
                                     <a class="d-block w-100" data-toggle="collapse" href="#collapseThree">
