--- a/CovidXWebApp/Views/Profile/Dependent.cshtml
+++ b/CovidXWebApp/Views/Profile/Dependent.cshtml
@@ -42,7 +42,7 @@
     <div class="card">
         <!-- CARD HEADER START -->
         <div class="card-header">
-            <h3 class="card-title">Your profile</h3>
+            <h3 class="card-title">Dependent Create</h3>
             <!-- CARD TOOLS START -->
             <div class="card-tools">
                 <!-- ADD CARD TOOLS HERE -->
@@ -100,7 +100,7 @@
                     class="btn btn-outline-primary">
                 Save
             </button>
-            <a asp-action="Index"
+            <a asp-action="PatientDashboard"
                asp-controller="Home"
                class="btn btn-outline-secondary float-right">
                 Cancel
