--- a/CovidXWebApp/Views/Profile/DependentDetails/_MedicalAidPlan.cshtml
+++ b/CovidXWebApp/Views/Profile/DependentDetails/_MedicalAidPlan.cshtml
@@ -22,7 +22,7 @@
                class="custom-control-input">
         <!-- INPUT LABEL -->
         <label asp-for="MedicalAidSameasMainMember"
-               class="custom-control-label">MedicalAid Same as Main Member?</label>
+               class="custom-control-label">Medical Aid Same as Main Member?</label>
     </div>
 </div>
 <!-- SWITCH INPUT END -->
@@ -44,7 +44,7 @@
 <div class="form-group">
 
     <!-- INPUT LABEL -->
-    <label asp-for="MedicalAidPlanId"></label>
+    <label asp-for="MedicalAidPlanId">Medical Aid Plan</label>
 
     <!-- INPUT ITEM -->
     <select asp-for="MedicalAidPlanId"
