--- a/CovidXWebApp/Views/Profile/ProfileDetails/_MedicalAidPlan.cshtml
+++ b/CovidXWebApp/Views/Profile/ProfileDetails/_MedicalAidPlan.cshtml
@@ -20,7 +20,7 @@
 
 
     <!-- INPUT LABEL -->
-    <label asp-for="MedicalAidPlanID"></label>
+    <label>Medical Aid Plan</label>
 
     <!-- INPUT ITEM -->
     <select asp-for="MedicalAidPlanID"
