--- a/CovidXWebApp/Views/Shared/CovidX/MainNavigation/_NurseNavigation.cshtml
+++ b/CovidXWebApp/Views/Shared/CovidX/MainNavigation/_NurseNavigation.cshtml
@@ -13,7 +13,7 @@
             <a asp-controller="Nurse"
                asp-action="NurseViewProfile"
                class="nav-link @Url.MakeActiveClass(controllerName: "Nurse", actionName: "NurseViewProfile")">
-                <i class="nav-icon fas fa-user-plus"></i>
+                <i class="nav-icon fas fa-user"></i>
                 <p>View Profile</p>
             </a>
         </li>
@@ -21,7 +21,7 @@
             <a asp-controller="Calendar"
                asp-action="Index"
                class="nav-link @Url.MakeActiveClass(controllerName: "Calendar", actionName: "Index")">
-                <i class="nav-icon fas fa-file-medical-alt"></i>
+                <i class="nav-icon fas fa-calendar"></i>
                 <p>Schedule a Test</p>
             </a>
         </li>
@@ -29,7 +29,7 @@
             <a asp-controller="Nurse"
                asp-action="ScheduledTestRequests"
                class="nav-link @Url.MakeActiveClass(controllerName: "Nurse", actionName: "ScheduledTestRequests")">
-                <i class="nav-icon fas fa-file-medical-alt"></i>
+                <i class="nav-icon fas fa-clipboard-list"></i>
                 <p>View scheduled Test Request</p>
             </a>
         </li>
