--- a/CovidXWebApp/Views/Shared/CovidX/MainNavigation/_PatientNavigation.cshtml
+++ b/CovidXWebApp/Views/Shared/CovidX/MainNavigation/_PatientNavigation.cshtml
@@ -35,10 +35,10 @@
         </li>
         <li class="nav-item">
             <a asp-controller="Profile"
-               asp-action="ViewTestRequestDetails"
-               class="nav-link @Url.MakeActiveClass(controllerName: "Profile", actionName: "ViewTestRequestDetails")">
+               asp-action="ViewTestResults"
+               class="nav-link @Url.MakeActiveClass(controllerName: "Profile", actionName: "ViewTestResults")">
                 <i class="nav-icon fas fa-clipboard-list"></i>
-                <p>View Test Request Details</p>
+                <p>View Test Results</p>
             </a>
         </li>
     </ul>
