--- a/CovidXWebApp/Views/Shared/CovidX/_MainNavigation.cshtml
+++ b/CovidXWebApp/Views/Shared/CovidX/_MainNavigation.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    string BrandName = "CO-X!";
+    string BrandName = "CO-X";
             }
 
 <aside class="main-sidebar sidebar-light-blue elevation-4">
