--- a/CovidXWebApp/Views/Calendar/Index.cshtml
+++ b/CovidXWebApp/Views/Calendar/Index.cshtml
@@ -23,6 +23,9 @@
 @section Scripts{
     <script src="~/js/calenderEvents.js"></script>
 }
+<div class="row justify-content-center">
+    <partial name="CovidX/Page/_Alert" model="Model.Alert" />
+</div>
 
 <!-- 12 COLUMN ROW START -->
 <div class="row justify-content-center">
@@ -30,7 +33,7 @@
 
     <div class="col-md-3">
         <div class="sticky-top mb-3">
-            <div class="card">
+            <div class="card card-secondary">
                 <div class="card-header">
                     <h4 class="card-title">Assigned Test Requests</h4>
                 </div>
@@ -43,7 +46,7 @@
                              data-value-ID="@request.ID"
                              data-value-description="@request.Description">
 
-                            @request.Description-@request.ID
+                            @request.Description
                         </div>
                         }
                     </div>
@@ -54,7 +57,7 @@
     </div>
     <!-- /.col -->
     <div class="col-md-9">
-        <div class="card card-primary">
+        <div class="card card-info">
             <div class="card-body p-0">
                 <!-- THE CALENDAR -->
                 <div id="calendar"></div>
