--- a/CovidXWebApp/Views/Home/NurseDashboard.cshtml
+++ b/CovidXWebApp/Views/Home/NurseDashboard.cshtml
@@ -8,7 +8,7 @@
 
 
 @{
-    string headerText = "Nurse Dashboard";
+    string headerText = "My Dashboard";
     //// get the user id
     var user = await _userManager.GetUserAsync(User);
     var nurse = _nurseService.FindNurseByUserID(user.Id);
@@ -28,10 +28,10 @@
 
 <!-- 6 COLUMN CARD START -->
 <div class="col-md-12">
-    <div class="card">
+    <div class="card card-gray">
         <!-- CARD HEADER START -->
         <div class="card-header border-0">
-            <h3 class="card-title">Test Requests by favourite Suburbs</h3>
+            <h3 class="card-title">Favourite Suburbs Test Request</h3>
             <!-- CARD TOOLS START -->
             <div class="card-tools">
                 <!-- ADD CARD TOOLS HERE -->
@@ -69,9 +69,15 @@
                             <!-- TABLE CONTENT ROW -->
                             <tr>
                                 <td>
+                                    <small class="text-info mr-1">
+                                        <i class="fas fa-house-user"></i>
+                                    </small>
                                     @fav.TestAddress1
                                 </td>
                                 <td>
+                                    <small class="text-secondary mr-1">
+                                        <i class="fas fa-home"></i>
+                                    </small>
                                     @fav.Suburb.SuburbName
                                 </td>
                                 <td>
