--- a/CovidXWebApp/Views/Home/PatientDashboard.cshtml
+++ b/CovidXWebApp/Views/Home/PatientDashboard.cshtml
@@ -4,12 +4,12 @@
 }
 
 
-@model PatientCreateViewModel
+@model TestRequestDetailModel
 @inject IPatientServices _patientService
 @inject UserManager<EFCoreIdentityUser> _userManager
 
 @{
-    string headerText = "Patient Profile";
+    string headerText = "Your Test Requests";
     var user = await _userManager.GetUserAsync(User);
     var patient = _patientService.GetPatientDetail(user.Id);
     var pendingRequests = _patientService.GetTestRequests(user.Id).Where(req => req.Status == TestRequestStatus.New).Count();
@@ -27,7 +27,7 @@
 <!-- 12 COLUMN ROW START -->
 <div class="row justify-content-center">
     <!-- PROFILE SUMMARY-->
-    <div class="card card-primary card-outline col-md-4">
+    <div class="card card-info card-outline col-md-4">
         <div class="card-body box-profile">
             <div class="text-center">
                 <img class="profile-user-img img-fluid img-circle" src="@Url.Content("~/img/avatar/" + user.Avatar)" alt="User profile picture">
@@ -56,7 +56,7 @@
 
     <!-- DEPENDANT SUMMARY -->
     <div class="col-md-8">
-        <partial name="Table/_DependentList" model="patient" />
+        <partial name="Table/_PatientTestRequest" model="Model" />
     </div>
 
 </div>
