--- a/CovidXWebApp/Views/Home/Table/_DependantList.cshtml
+++ b/CovidXWebApp/Views/Home/Table/_DependantList.cshtml
@@ -13,7 +13,7 @@
 
 }
 
-<div class="card">
+<div class="card card-secondary card-outline" >
     <!-- CARD HEADER START -->
     <div class="card-header border-0">
         <h3 class="card-title">Dependants for @Model.FirstName @Model.LastName</h3>
@@ -70,7 +70,7 @@
                                 @dependent.AddressLine1
                             </td>
                             <td>
-                                @( "00" + dependent.DependentID)
+                                @dependent.DependencyCode 
                             </td>
                         </tr>
                     }
