--- a/CovidXWebApp/Views/Manager/Reports.cshtml
+++ b/CovidXWebApp/Views/Manager/Reports.cshtml
@@ -49,7 +49,7 @@
     <form asp-controller="Manager"
           asp-action="Reports"
           class="col-md-8">
-        <div class="card card-primary">
+        <div class="card card-navy">
             <div class="card-header">
                 <h3 class="card-title">Date picker</h3>
             </div>
@@ -97,165 +97,12 @@
                         class="btn btn-outline-primary">
                     Generate Report
                 </button>
-                <a asp-action="Index"
-                   asp-controller="Home"
-                   class="btn btn-outline-secondary float-right">
-                    Cancel
-                </a>
             </div>
         </div>
     </form>
 
 </div>
 
-<div class="card card-lightblue">
-    <!-- CARD HEADER START -->
-    <div class="card-header">
-        <h3 class="card-title">Title Goes Here</h3>
-        <!-- CARD TOOLS START -->
-        <div class="card-tools">
-            <!-- ADD CARD TOOLS HERE -->
-
-        </div>
-        <!-- CARD TOOLS END -->
-    </div>
-    <!-- CARD HEADER END -->
-    <!-- CARD BODY START -->
-    <div class="card-body">
-        <!-- ADD CONTENT HERE -->
-        <div class="row justify-content-center">
-            <!-- DATA TABLE START -->
-            <table class="table table-striped table-valign-middle" id="example">
-                <!-- HEADER START -->
-                <thead>
-                    <tr>
-                        <!-- BUTTON HEADER -->
-                        @*<th>DependentID</th>*@
-                        <!-- COLUMN HEADER START-->
-                        <th>Test Subject</th>
-                        <th>Medical Aid plan</th>
-                        <th>Barcode</th>
-                        <th>Temperature</th>
-                        <th>Blood Pressure</th>
-                        <th>Oxygen Levels</th>
-                        <th>Test Date</th>
-                        <th>Test Time</th>
-                        <th>Test Result</th>
-                        <th>Lab User</th>
-                        <!-- COLUMN HEADER END -->
-                    </tr>
-                </thead>
-                <!-- HEADER END -->
-                <!-- ADD CONTENT HERE -->
-                @if (Model is not null)
-                {
-                    var list = _nurseService.GetReportDetail(Model);
-
-                    @if (list == null)
-                    {
-                        @*@if (_patientService.GetDependents(patient.PatientId) is null)
-                            {*@
-                        // no content to display
-                        //}
-
-                    }
-                    else
-                    {
-                        <tbody>
-                            <!-- ROW CONTENT HERE -->
-                            @foreach (var item in list)
-                            {
-                                <tr>
-                                    @if (item.Test.TestRequest.DependentID is null)
-                                    {
-                                        <td>
-                                            @item.Test.TestRequest.Patient.FirstName  @item.Test.TestRequest.Patient.LastName
-
-                                        </td>
-                                        @if (item.Test.TestRequest.Patient.MedicalAidPlan is not null)
-                                        {
-                                            <td>
-                                                @item.Test.TestRequest.Patient.MedicalAidPlan.Description
-                                            </td>
-                                        }
-                                        else
-                                        {
-                                            <td>
-                                                None
-                                            </td>
-                                        }
-
-                                    }
-                                    else
-                                    {
-                                        <td>
-                                            @item.Test.TestRequest.Dependent.FirstName  @item.Test.TestRequest.Dependent.LastName
-
-                                        </td>
-                                        @if (item.Test.TestRequest.Patient.MedicalAidPlan is not null)
-                                        {
-                                            <td>
-                                                @item.Test.TestRequest.Dependent.MedicalAidPlan.Description
-                                            </td>
-
-                                        }
-                                        else
-                                        {
-                                            <td>
-                                                None
-                                            </td>
-                                        }
-
-
-
-
-                                    }
-
-                                    <td>
-                                        @item.Test.BarCode
-                                    </td>
-                                    <td>
-                                        @item.Test.Temperature
-                                    </td>
-                                    <td>
-                                        @item.Test.BloodPressure
-                                    </td>
-                                    <td>
-                                        @item.Test.OxygenLevel
-                                    </td>
-                                    <td>
-                                        @item.Test.TestDate.ToShortDateString()
-                                    </td>
-                                    <td>
-                                        @item.Test.TestTime.ToShortTimeString()
-                                    </td>
-                                    <td>
-                                        Viwe Nkepu
-                                    </td>
-
-
-
-                                </tr>
-                            }
-                        </tbody>
-                        <!-- TABLE BODY CONTENT END -->
-                    }
-
-                }
-            </table>
-            <!-- DATA TABLE END -->
-
-        </div>
-
-    </div>
-    <!-- CARD BODY END -->
-    <!-- CARD FOOTER START -->
-    <div class="card-footer">
-        <!-- ADD BUTTONS HERE -->
-
-    </div>
-    <!-- CARD FOOTER END -->
-</div>
 
 
 
