--- a/CovidXWebApp/Views/Nurse/NurseViewProfile.cshtml
+++ b/CovidXWebApp/Views/Nurse/NurseViewProfile.cshtml
@@ -4,7 +4,7 @@
 }
 
 @{
-    string headerText = "Nurse Profile";
+    string headerText = "My Nurse Profile";
 }
 
 
@@ -18,6 +18,9 @@
 @{
     var user = _usermanager.FindByNameAsync(User.Identity.Name).Result;
     var nurse = _nurseService.FindNurseByUserID(user.Id);
+    var assignedRequests = _nurseService.GetAssignedTestRequests(user.Id).Count;
+    var scheduledRequests = _nurseService.GetScheduledTestRequests(user.Id).Count;
+
 
 }
 
@@ -58,17 +61,20 @@
 
                 <div>
 
-                <ul class="list-group list-group-unbordered mb-3">
-                    <li class="list-group-item">
-                        <b>Residential Suburb</b> <a class="float-right">@nurse.SuburbID</a>
-                    </li>
-                    <li class="list-group-item">
-                        <b>Assigned Requests</b> <a class="float-right">50</a>
-                    </li>
-                    <li class="list-group-item">
-                        <b>Scheduled Requsts</b> <a class="float-right">38</a>
-                    </li>
-                </ul>
+                    <ul class="list-group list-group-unbordered mb-3">
+                        <li class="list-group-item">
+                            <b>Mobile Number</b> <a class="float-right">@nurse.MobileNumber</a>
+                        </li>
+                        <li class="list-group-item">
+                            <b>Email</b> <a class="float-right">@nurse.EmailAddress</a>
+                        </li>
+                        <li class="list-group-item">
+                            <b>Assigned Requests</b> <a class="float-right">@assignedRequests</a>
+                        </li>
+                        <li class="list-group-item">
+                            <b>Scheduled Requsts</b> <a class="float-right">@scheduledRequests</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
             <div class="footer" style="text-align: center">
@@ -93,19 +99,13 @@
         <form asp-controller="Nurse"
               asp-action="NurseViewProfile"
               class="col-md-9 form-horizontal">
-            <div class="card">
+            <div class="card card-lime card-outline">
                 <!-- CARD HEADER START -->
                 <div class="card-header">
                     <h3 class="card-title">Pick Favourite Suburbs</h3>
                     <!-- CARD TOOLS START -->
                     <div class="card-tools">
-                        <!-- ADD CARD TOOLS HERE -->
-                        <!-- This will cause the card to close when clicked -->
-                        <!--<partial name="Card/Tools/_removePartial.cshtml" />-->
-                        <!-- This will cause the card to maximize when clicked -->
-                        <!--<partial name="Card/Tools/_maximizePartial.cshtml" />-->
-                        <!-- This will cause the card to minimize when clicked -->
-                        <!--<partial name="Card/Tools/_collapsePartial.cshtml" />-->
+                        
 
                     </div>
                     <!-- CARD TOOLS END -->
@@ -126,7 +126,7 @@
                             class="btn btn-outline-primary">
                         Save
                     </button>
-                    <a asp-action="Dashboard"
+                    <a asp-action="NurseDashboard"
                        asp-controller="Home"
                        class="btn btn-outline-secondary float-right">
                         Cancel
