--- a/CovidXWebApp/Views/Shared/CovidX/MainNavigation/_Brand.cshtml
+++ b/CovidXWebApp/Views/Shared/CovidX/MainNavigation/_Brand.cshtml
@@ -2,6 +2,6 @@
 
 <a href="#"
    class="brand-link text-center">
-    <img src="@Url.Content("~/img/techbuzz-logo.svg")" alt="TechBuzz Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
+    <img src="@Url.Content("~/img/CovidXLogo.png")" alt="TechBuzz Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
     <span class="brand-text font-weight-bold">CO-X</span>
 </a>
